# wgtf

./: .gitignore  .gitmodules  .mailmap  README.md  README.txt  run_tests.bat
src/: CMakeLists.txt
src/bw/adapters/: CMakeLists.txt
src/bw/adapters/appmgr/: app.hpp
src/bw/adapters/common/: cooperative_moo.hpp  string_utils.hpp
src/bw/adapters/cstdmf/: bw_map.hpp  bw_set.hpp  bw_string.hpp  bw_vector.hpp  init_singleton.hpp  singleton.hpp  singleton_manager.cpp  singleton_manager.hpp  stack_tracker.hpp  string_utils.hpp  watcher.hpp
src/bw/adapters/guimanager/: gui_bitmap.cpp  gui_bitmap.hpp  gui_forward.hpp  gui_functor.hpp  gui_functor_cpp.hpp  gui_functor_datasection.hpp  gui_functor_option.hpp  gui_functor_python.hpp  gui_functor_watcher.hpp  gui_input_handler.cpp  gui_item.cpp  gui_item.hpp  gui_manager.cpp  gui_manager.hpp  gui_menu.cpp  gui_menu.hpp  gui_toolbar.cpp  gui_toolbar.hpp  i_menu_helper.hpp  py_gui_item.cpp
src/bw/adapters/input/: input.hpp
src/bw/adapters/moo/: render_context.hpp
src/bw/adapters/pyscript/: script.hpp
src/bw/adapters/resmgr/: bwresource.cpp  bwresource.hpp  datasection.hpp
src/bw/lib/bw_qt_common/: CMakeLists.txt
src/bw/lib/editor_shared/: CMakeLists.mfc.txt  CMakeLists.txt
src/bw/plugins/plg_bw_core/: CMakeLists.txt  plugin_main.cpp  qt_type_converters.hpp
src/bw/testing/plg_test_bw_types/: CMakeLists.txt  plugin_main.cpp
src/bw/testing/plg_test_ui_main/: CMakeLists.txt  controls.qrc  plugin_main.cpp  test_datasource.cpp  test_tree_item.hpp  test_tree_model.cpp  test_tree_model.hpp
src/bw/testing/reflection_test_objects/: test_macros.hpp  test_objects_common.hpp  test_polystruct.cpp  test_polystruct.hpp  test_structure.cpp  test_structure.hpp
src/bw/testing/reflection_unit_test/: main.cpp  test_class_definition.cpp  test_function_property.cpp  test_generic_object.cpp  test_helpers.hpp  test_reflection_fixture.hpp  test_reflection_utilities.cpp  test_xml_serializer.cpp
src/core/app/generic_app/: CMakeLists.txt  plugins.txt  plugins_ui.txt
src/core/app/maya_generic_app/: CMakeLists.txt
src/core/app/maya_plugin/: CMakeLists.txt  plugins_maya.txt
src/core/interfaces/application_settings/: i_application_settings.hpp
src/core/interfaces/core_copy_paste/: i_copy_paste_manager.hpp  i_copyable_object.hpp
src/core/interfaces/core_python_script/: CMakeLists.txt  i_interpreter.hpp  i_module.hpp  i_python_meta_type.hpp  i_scripting_engine.hpp  i_type_converter.hpp  python_meta_type.cpp  python_meta_type.hpp
src/core/interfaces/core_script/: CMakeLists.txt  type_converter_queue.hpp
src/core/interfaces/core_serialization/: i_file_info.hpp  i_file_system.hpp  i_file_utilities.hpp
src/core/interfaces/panel_manager/: i_panel_manager.hpp
src/core/interfaces/version_control/: i_depot_view.hpp  i_result.hpp  i_version_control.hpp
src/core/lib/asset_browser/: i_asset_browser_manager.hpp  i_asset_listener.hpp
src/core/lib/automation/: CMakeLists.txt
src/core/lib/command_system/: CMakeLists.txt  batch_command.cpp  batch_command.hpp  command.cpp  command.hpp  command_instance.cpp  command_instance.hpp  command_manager.cpp  command_manager.hpp  command_system.hpp  command_system_provider.hpp  compound_command.cpp  compound_command.hpp  executor.hpp  i_command_event_listener.hpp  i_command_manager.hpp  macro_object.cpp  macro_object.hpp  reflected_command.cpp  reflected_command.hpp  runnable.hpp  scoped_disable_command_recording.cpp  scoped_disable_command_recording.hpp
src/core/lib/control_system/: CMakeLists.txt  control_manager.cpp  control_manager.hpp
src/core/lib/copy_paste_system/: CMakeLists.txt  copy_paste_manager.cpp  copy_paste_manager.hpp
src/core/lib/core_asset_browser/: i_asset_browser_manager.hpp  i_asset_listener.hpp
src/core/lib/core_automation/: CMakeLists.txt
src/core/lib/core_command_system/: CMakeLists.txt  batch_command.cpp  batch_command.hpp  command.cpp  command.hpp  command_instance.cpp  command_instance.hpp  command_manager.cpp  command_manager.hpp  command_system.cpp  command_system.hpp  compound_command.cpp  compound_command.hpp  custom_undo_redo_data.cpp  custom_undo_redo_data.hpp  env_system.cpp  env_system.hpp  i_command_event_listener.hpp  i_command_manager.hpp  i_env_system.hpp  i_history_panel.h  macro_object.cpp  macro_object.hpp  reflection_undo_redo_data.cpp  reflection_undo_redo_data.hpp  undo_redo_command.cpp  undo_redo_command.hpp  undo_redo_data.hpp
src/core/lib/core_common/: CMakeLists.txt  CMakeLists.unix.txt  CMakeLists.windows.txt  environment_windows.cpp  ngt_windows.cpp  ngt_windows.hpp  objects_pool.hpp  platform_dbg.cpp  platform_dbg.hpp  platform_dll.cpp  platform_dll.hpp  platform_env.cpp  platform_env.hpp  platform_path.cpp  platform_path.hpp  platform_std.hpp  shared_library.cpp  shared_library.hpp  shared_library_unix.cpp  shared_library_windows.cpp  signal.cpp  signal.hpp  thread_local_value.cpp  thread_local_value.hpp  thread_local_value_impl.hpp  wg_condition_variable.cpp  wg_condition_variable.hpp  wg_read_write_lock.cpp  wg_read_write_lock.hpp
src/core/lib/core_control_system/: CMakeLists.txt  control_manager.cpp  control_manager.hpp
src/core/lib/core_copy_paste/: CMakeLists.txt  copy_paste_manager.cpp  copy_paste_manager.hpp  i_copy_paste_manager.hpp
src/core/lib/core_data_model/: CMakeLists.txt  abstract_item.hpp  abstract_item_model.hpp  collection_list_item.cpp  collection_list_item.hpp  collection_list_model.cpp  collection_list_model.hpp  collection_model.cpp  collection_model.hpp  collection_model_old.cpp  collection_model_old.hpp  common_data_roles.hpp  filtered_list_model.cpp  filtered_list_model.hpp  filtered_tree_model.cpp  filtered_tree_model.hpp  generic_list.cpp  generic_list.hpp  generic_tree_item.cpp  generic_tree_item.hpp  generic_tree_model.cpp  generic_tree_model.hpp  i_active_filters_model.hpp  (+21 more)
src/core/plugins/: ngt_core_plugins.qmlproject
src/core/testing/: ngt_core_testing.qmlproject
src/wgs/plugins/: plugins.txt  wgs_curve_editor.txt  wgs_developer.txt  wgs_maya_blueprint_editor.txt  wgs_particle_editor.txt
(+2699 files in other folders)
